--- a/index.html
+++ b/index.html
@@ -316,74 +316,122 @@
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
+
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-photo"
-                src="./images/img-5.jpg"
-                alt="Banking App"
-                width="360"
-              />
+              <div class="img-container">
+                <img
+                  class="portfolio-photo"
+                  src="./images/img-5.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-card">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-photo"
-                src="./images/img-6.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="img-container">
+                <img
+                  class="portfolio-photo"
+                  src="./images/img-6.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-card">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-photo"
-                src="./images/img-7.jpg"
-                alt="Meditation"
-                width="360"
-              />
+              <div class="img-container">
+                <img
+                  class="portfolio-photo"
+                  src="./images/img-7.jpg"
+                  alt="Meditation"
+                  width="360"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-card">
                 <h3 class="portfolio-item-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-photo"
-                src="./images/img-8.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+              <div class="img-container">
+                <img
+                  class="portfolio-photo"
+                  src="./images/img-8.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-card">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-photo"
-                src="./images/img-9.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="img-container">
+                <img
+                  class="portfolio-photo"
+                  src="./images/img-9.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-card">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
+
             <li class="portfolio-item">
-              <img
-                class="portfolio-photo"
-                src="./images/img-10.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <div class="img-container">
+                <img
+                  class="portfolio-photo"
+                  src="./images/img-10.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-card">
                 <h3 class="portfolio-item-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -396,13 +444,51 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="page-footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-wrap">
+          <div class="footer-info">
+            <a class="logo footer-logo" href="./index.html">
+              Web<span class="logo-part">Studio</span>
+            </a>
+            <p class="page-footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+
+          <div class="footer-social">
+            <p class="social-title">Social media</p>
+            <ul class="social-list">
+              <li class="social-item">
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="" class="social-link">
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
