--- a/index.html
+++ b/index.html
@@ -133,34 +133,34 @@
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
 
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -180,34 +180,34 @@
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
 
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -227,34 +227,34 @@
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
 
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -274,34 +274,34 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
 
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                <ul class="team-social-list">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-item">
-                    <a href="" class="social-link">
-                      <svg class="social-icon" width="16" height="16">
+                  <li class="team-social-item">
+                    <a href="" class="team-link-icon">
+                      <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -453,33 +453,34 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="social-wrap">
-          <p class="social-title">Social media</p>
-          <ul class="social-list">
-            <li class="social-item">
-              <a class="social-link" href="">
-                <svg class="social-icon" width="24" height="24">
+
+        <div class="footer-social-wrap">
+          <p class="footer-social-title">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a class="social-link" href="">
-                <svg class="social-icon" width="24" height="24">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a class="social-link" href="">
-                <svg class="social-icon" width="24" height="24">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a class="social-link" href="">
-                <svg class="social-icon" width="24" height="24">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
